--- a/server/docker-compose.yml
+++ b/server/docker-compose.yml
@@ -8,8 +8,8 @@ services:
       MYSQL_DATABASE: ${MYSQL_DB:-calendar_suite}
       MYSQL_USER: ${MYSQL_USER:-calendar_user}
       MYSQL_PASSWORD: ${MYSQL_PASSWORD:-calendar_password}
-    ports:
-      - "${MYSQL_PORT:-3307}:3306"
+    # ports:
+    #   - "${MYSQL_PORT:-3307}:3306"
     volumes:
       - mysql_data:/var/lib/mysql
     healthcheck:
